fixed RPS line spacing

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -343,6 +343,9 @@ header {
   .rps {
     background-color: var(--clr-dark);
   }
+  .rpstxt {
+    height: 200px;
+  }
   
   .btn {
     display: inline-block;
